--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,20 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
     "prebuild": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "build" : "npm i"
+    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "build" : "npm i",
+    "heroku-postbuild": "cd client && npm install && npm run build"
+
   },
   "author": "",
   "license": "ISC",
